# energyriskiq-ops

./: .env.example  .replit  OPERATIONS.md  README.md  Testing.md  geri-sources-documentation.md  pyproject.toml  replit.md  requirements.txt
ERIQ/: alert-taxonomy.md  asset-mapping-definitions.md  assets-updates.md  blog.md  eeri-methodology.md  eeri-pro-plan-features.md  eeri-trader-dashboard.md  eeri-weekly-public-snapshot.md  egsi-development.md  egsi-methodology.md  egsi-trader-dashboard.md  geri-live.md  geri-methodology.md  geri-trader-dashboard.md  indices-bible.md  ingestion-sources-report.md  interpretation-playbook.md  oilpriceapi-reference.md  reri-eeri-development-document.md  reri.md
attached_assets/: Email_and_Telegram_Sending_Functionality_1771583165920.docx  Pasted--1-Difference-Between-GERI-and-RERI-conceptual-commerci_1769173307404.txt  Pasted--1-FULL-EGSI-DASHBOARD-UI-FEATURE-MAP-Exact-Widgets-Per_1770638069924.txt  Pasted--1-RERI-Is-Not-an-Index-It-Is-a-Decision-Layer-The-bigg_1769176875911.txt  Pasted--1-The-architect-s-feedback-is-noted-The-delivery-gatin_1771583284060.txt  Pasted--1-What-You-Did-VERY-Well-You-already-have-the-right-in_1771076952550.txt  Pasted--2-WHY-THIS-MATTERS-FINAL-DESIGN-Section-Title-H2-Price_1774099637019.txt  Pasted--2-What-Should-the-PUBLIC-Output-of-RERI-Be-This-is-whe_1769173624986.txt  Pasted--4-RERI-Computation-Model-v1-production-safe-You-propos_1769174854005.txt  Pasted--50-60-questions-remaining-today-You-What-is-the-curren_1770832072062.txt  (+149 more)
docs/: BRENT_PRICE_SCENARIO_TOOL.md  EGSI Dashboard Implementation.md  (+20 more)
(+210 files in other folders)
